--- a/ConfluxMobile/Conflux.UI/App.xaml
+++ b/ConfluxMobile/Conflux.UI/App.xaml
@@ -7,7 +7,7 @@
         <SolidColorBrush x:Key="ButtonPressedBackgroundThemeBrush" Color="#00ACAC"/>
         <Style TargetType="Button">
             <Setter Property="Background" Value="Teal"/>
-            <Setter Property="Foreground" Value="WhiteSmoke"/>
+            <Setter Property="Foreground" Value="White"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="IsTextScaleFactorEnabled" Value="False" />
         </Style>
