--- a/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="WhiteSmoke">
 
     <Page.Transitions>
         <TransitionCollection>
@@ -22,31 +22,24 @@
 
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
-            <TextBlock Text="CONFLUX" Margin="0,12,0,0" 
+            <TextBlock Text="CONFLUX" Margin="0,12,0,0" Foreground="Teal"
                        Style="{ThemeResource TitleTextBlockStyle}" />
-            <TextBlock Text="shared info" Margin="0,-6.5,0,26.5" 
+            <TextBlock Text="shared info" Margin="0,-6.5,0,26.5" Foreground="Teal"
                        Style="{ThemeResource HeaderTextBlockStyle}" 
                        CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" />
         </StackPanel>
         <Grid Grid.Row="1" Margin="19,9.5,19,0">
             <ScrollViewer ZoomMode="Disabled" HorizontalScrollMode="Disabled" VerticalScrollMode="Enabled">
                 <StackPanel>
-                    <RichTextBlock Margin="0, 0, 0, 20" 
-                                   FontSize="16"
-                                   Style="{StaticResource BaseRichTextBlockStyle}"
-                                   IsTextSelectionEnabled="False">
+                    <RichTextBlock Margin="0, 0, 0, 20">
                         <Paragraph>
-                            <Run IsTextScaleFactorEnabled="True" 
-                                 Text="Conflux helps you to keep up with the daily events around you, but in order to do so, you will need to log in with your Facebook account. The only info you will be asked to share with this app, is the one which is associated with your Facebook account. Provided data "/>
-                            <Run IsTextScaleFactorEnabled="True"
-                                 Text="will never be used to track you" Foreground="{ThemeResource PhoneAccentBrush}"/>
-                            <Run IsTextScaleFactorEnabled="True"
-                                 Text=", instead it is intended to provide you a better social experience."/>
+                            <Run Text="Conflux helps you to keep up with the daily events around you, but in order to do so, you will need to log in with your Facebook account. The only info you will be asked to share with this app, is the one which is associated with your Facebook account. Provided data "/>
+                            <Run Text="will never be used to track you" Foreground="Goldenrod"/>
+                            <Run Text=", instead it is intended to provide you a better social experience."/>
                         </Paragraph>
                         <Paragraph/>
                         <Paragraph>
-                            <Run IsTextScaleFactorEnabled="True" 
-                         Text="Here's what Conflux would like to know about you :"/>
+                            <Run Text="Here's what Conflux would like to know about you :"/>
                         </Paragraph>
                     </RichTextBlock>
                     <ListView ItemsSource="{Binding Items}" SelectionMode="None">
@@ -73,7 +66,7 @@
                                                TextWrapping="Wrap" Text="{Binding Details}" 
                                                Style="{StaticResource BaseTextBlockStyle}"
                                                FontSize="16"
-                                               Foreground="{ThemeResource MidBrush}"
+                                               Foreground="Black"
                                                VerticalAlignment="Top" HorizontalAlignment="Left"/>
                                 </Grid>
                             </DataTemplate>
