--- a/ConfluxMobile/Conflux.UI/App.xaml
+++ b/ConfluxMobile/Conflux.UI/App.xaml
@@ -4,7 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Application.Resources>
+        <SolidColorBrush x:Key="ToggleSwitchCurtainBackgroundThemeBrush" Color="Teal" />
+        <SolidColorBrush x:Key="ToggleSwitchCurtainPressedBackgroundThemeBrush" Color="#00ACAC" />
         <SolidColorBrush x:Key="ButtonPressedBackgroundThemeBrush" Color="#00ACAC"/>
+        <SolidColorBrush x:Key="CheckBoxPressedBackgroundThemeBrush" Color="#00ACAC"/>
         <Style TargetType="Button">
             <Setter Property="Background" Value="Teal"/>
             <Setter Property="Foreground" Value="White"/>
@@ -22,6 +25,12 @@
             <Setter Property="IsTextSelectionEnabled" Value="False"/>
             <Setter Property="IsTextScaleFactorEnabled" Value="False"/>
             <Setter Property="FontSize" Value="18"></Setter>
+        </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="IsTextScaleFactorEnabled" Value="False"/>
+        </Style>
+        <Style TargetType="Pivot">
+            <Setter Property="IsTextScaleFactorEnabled" Value="False"/>
         </Style>
     </Application.Resources>
 </Application>
