--- a/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
@@ -8,7 +8,7 @@
     xmlns:local="using:Conflux.UI"
     xmlns:converters="using:Conflux.UI.Converters"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Background="White"
     Loaded="OnPageLoaded">
 
     <Page.Resources>
@@ -61,11 +61,11 @@
                     </ObjectAnimationUsingKeyFrames>
                 </Storyboard>
             </Grid.Resources>
-            <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}" Opacity="0.85" />
+            <Grid Background="White" Opacity="0.85" />
             <StackPanel VerticalAlignment="Center" >
-                <ProgressBar IsIndeterminate="True" Foreground="{StaticResource PhoneAccentBrush}" />
+                <ProgressBar IsIndeterminate="True" Foreground="Teal" />
                 <TextBlock Margin="0, 5, 0, 0"
-                           Text="Collecting event details..."  FontSize="13"
+                           Text="Collecting event details..."  FontSize="13" Foreground="Black"
                            HorizontalAlignment="Center" />
             </StackPanel>
         </Grid>
@@ -125,8 +125,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Margin="19,0,0,0">
-                <TextBlock Text="{Binding Title}"
+            <StackPanel Grid.Row="0" Margin="19,10,0,0">
+                <TextBlock Text="{Binding Title}" Foreground="Teal"
                        Height="24"
                        TextTrimming="CharacterEllipsis"
                        Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"
@@ -144,7 +144,7 @@
                         <maps:MapControl x:Name="LocationMap" MapServiceToken="cXpfbMzhrd_e1xcrA_iAuA"/>
                     </Grid>
                     <Hub Grid.Row="1" Margin="0, 25, 0, 0">
-                        <HubSection Header="ABOUT" x:Name="AboutHubSection">
+                        <HubSection Header="ABOUT" Foreground="Teal" x:Name="AboutHubSection">
                             <DataTemplate>
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -154,7 +154,7 @@
                                     <Grid Grid.Row="0" Visibility="{Binding IsDescriptionAvailable, Converter={StaticResource NegatedBoolToVisibilityConverter}}">
                                         <TextBlock Text="This event is provided with no description."
                                                    TextWrapping="Wrap"
-                                                   FontSize="16" Foreground="{StaticResource MidBrush}"/>
+                                                   FontSize="16" Foreground="DarkGray"/>
                                     </Grid>
                                     <Grid x:Name="ShortDescriptionPanel" Grid.Row="0">
                                         <Grid.RowDefinitions>
@@ -162,10 +162,10 @@
                                             <RowDefinition Height="Auto"/>
                                         </Grid.RowDefinitions>
                                         <TextBlock Grid.Row="0" 
-                                                   local:TextBlockExtension.FormattedText="{Binding ShortDescription}" FontSize="16" 
+                                                   local:TextBlockExtension.FormattedText="{Binding ShortDescription}" FontSize="16" Foreground="Black"
                                                    TextWrapping="Wrap"/>
                                         <TextBlock Grid.Row="1" Text="Show more" Visibility="{Binding IsDescriptionTooLong, Converter={StaticResource BoolToVisibilityConverter}}"
-                                               FontSize="16" Foreground="{StaticResource PhoneAccentBrush}"
+                                               FontSize="16" Foreground="Teal"
                                                Tapped="OnShowMoreTapped"/>
                                     </Grid>
                                     <Grid x:Name="FullDescriptionPanel" Grid.Row="1"
@@ -176,10 +176,10 @@
                                         </Grid.RowDefinitions>
                                         <ScrollViewer ZoomMode="Disabled">
                                             <StackPanel>
-                                                <TextBlock local:TextBlockExtension.FormattedText="{Binding FullDescription}" FontSize="16" 
+                                                <TextBlock local:TextBlockExtension.FormattedText="{Binding FullDescription}" FontSize="16"  Foreground="Black"
                                                            TextWrapping="Wrap"/>
                                                 <TextBlock Text="Show less" Visibility="Visible"
-                                                           FontSize="16" Foreground="{StaticResource PhoneAccentBrush}"
+                                                           FontSize="16" Foreground="Teal"
                                                            Tapped="OnShowLessTapped"/>
                                             </StackPanel>
                                         </ScrollViewer>
@@ -187,13 +187,13 @@
                                 </Grid>
                             </DataTemplate>
                         </HubSection>
-                        <HubSection Header="WHEN &amp; WHERE" Margin="0, 0, 0, 50">
+                        <HubSection Header="WHEN &amp; WHERE" Foreground="Teal" Margin="0, 0, 0, 50">
                             <DataTemplate>
                                 <ScrollViewer ZoomMode="Disabled">
                                     <StackPanel>
                                         <!-- Date and Time -->
                                         <StackPanel Orientation="Horizontal" Margin="0, 0, 0, 15">
-                                            <TextBlock Text="&#xE121;" FontSize="25" FontFamily="Segoe UI Symbol"
+                                            <TextBlock Text="&#xE121;" Foreground="Teal" FontSize="25" FontFamily="Segoe UI Symbol"
                                                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
                                             <Grid Margin="10, 0, 0, 0">
                                                 <Grid.RowDefinitions>
@@ -206,10 +206,10 @@
                                                             <ColumnDefinition Width="Auto"/>
                                                             <ColumnDefinition Width="*"/>
                                                         </Grid.ColumnDefinitions>
-                                                        <TextBlock Grid.Column="0" Text="Start time :" FontSize="16"/>
-                                                        <TextBlock Grid.Column="1" Margin="5, 0, 0, 0" Text="{Binding StartTime}" FontSize="16"/>
+                                                        <TextBlock Grid.Column="0" Text="Start time :" FontSize="16" Foreground="Black"/>
+                                                        <TextBlock Grid.Column="1" Margin="5, 0, 0, 0" Text="{Binding StartTime}" FontSize="16" Foreground="Black"/>
                                                     </Grid>
-                                                    <TextBlock Text="Start time is not defined." FontSize="16" Foreground="{StaticResource MidBrush}"
+                                                    <TextBlock Text="Start time is not defined." FontSize="16" Foreground="DarkGray"
                                                                Visibility="{Binding IsStartTimeAvailable, Converter={StaticResource NegatedBoolToVisibilityConverter}}"/>
                                                 </StackPanel>
                                                 <StackPanel Grid.Row="1" Orientation="Horizontal">
@@ -218,10 +218,10 @@
                                                             <ColumnDefinition Width="Auto"/>
                                                             <ColumnDefinition Width="*"/>
                                                         </Grid.ColumnDefinitions>
-                                                        <TextBlock Grid.Column="0" Text="End time :" FontSize="16"/>
-                                                        <TextBlock Grid.Column="1" Margin="5, 0, 0, 0" Text="{Binding EndTime}" FontSize="16"/>
+                                                        <TextBlock Grid.Column="0" Text="End time :" FontSize="16" Foreground="Black"/>
+                                                        <TextBlock Grid.Column="1" Margin="5, 0, 0, 0" Text="{Binding EndTime}" FontSize="16" Foreground="Black"/>
                                                     </Grid>
-                                                    <TextBlock Text="End time is undefined." FontSize="16" Foreground="{StaticResource MidBrush}"
+                                                    <TextBlock Text="End time is undefined." FontSize="16" Foreground="DarkGray"
                                                                Visibility="{Binding IsEndTimeAvailable, Converter={StaticResource NegatedBoolToVisibilityConverter}}"/>
                                                 </StackPanel>
                                             </Grid>
@@ -232,17 +232,17 @@
                                                 <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="*"/>
                                             </Grid.ColumnDefinitions>
-                                            <TextBlock Text="&#xE139;" FontSize="25" FontFamily="Segoe UI Symbol"
+                                            <TextBlock Text="&#xE139;" Foreground="Teal" FontSize="25" FontFamily="Segoe UI Symbol"
                                                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
                                             <Grid Grid.Column="1" Margin="10, 0, 0, 0">
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="*"/>
                                                 </Grid.RowDefinitions>
-                                                <TextBlock Grid.Row="0" Text="Location :" FontSize="16"/>
-                                                <TextBlock Grid.Row="1" Text="{Binding Location}" FontSize="16" TextWrapping="Wrap"
+                                                <TextBlock Grid.Row="0" Text="Location :" Foreground="Black" FontSize="16"/>
+                                                <TextBlock Grid.Row="1" Text="{Binding Location}" Foreground="Black" FontSize="16" TextWrapping="Wrap"
                                                            Visibility="{Binding IsLocationAvailable, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                                                <TextBlock Grid.Row="1" Foreground="{StaticResource MidBrush}"
+                                                <TextBlock Grid.Row="1" Foreground="DarkGray"
                                                            Text="This event's location is undefined." FontSize="16" TextWrapping="Wrap"
                                                            Visibility="{Binding IsLocationAvailable, Converter={StaticResource NegatedBoolToVisibilityConverter}}"/>
                                             </Grid>
@@ -251,10 +251,10 @@
                                 </ScrollViewer>
                             </DataTemplate>
                         </HubSection>
-                        <HubSection Header="SIMILAR" Margin="0, 0, 0, 50">
+                        <HubSection Header="SIMILAR" Foreground="Teal" Margin="0, 0, 0, 50">
                             <DataTemplate>
                                 <ScrollViewer>
-                                    <TextBlock FontSize="16" TextWrapping="Wrap"
+                                    <TextBlock FontSize="16" TextWrapping="Wrap" Foreground="Black"
                                     Text="[Not yet implemented] Search for events with similar Start Date or Location to this event's ones."/>
                                 </ScrollViewer>
                             </DataTemplate>
@@ -317,22 +317,22 @@
                 </Storyboard>
             </Grid.Resources>
             <StackPanel Grid.Row="0" Margin="19,0,0,0">
-                <TextBlock Text="SELECT MAP APP" Style="{ThemeResource MessageDialogTitleStyle}" Margin="0,12"/>
-                <TextBlock Text="Display the event using :" Margin="0, 10, 0, 30"
+                <TextBlock Text="SELECT MAP APP" Foreground="Teal" Style="{ThemeResource MessageDialogTitleStyle}" Margin="0,12"/>
+                <TextBlock Text="Display the event using :" Foreground="Black" Margin="0, 10, 0, 30"
                        Style="{StaticResource MessageDialogContentStyle}"/>
 
                 <ListView ItemsSource="{Binding MapAppsOptions}" SelectionChanged="OnMapAppItemSelectionChanged">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
-                                <TextBlock Text="{Binding Name}" FontSize="30"/>
+                                <TextBlock Text="{Binding Name}" Foreground="Teal" FontSize="30"/>
                                 <TextBlock Margin="0, 7" Text="{Binding Description}" TextWrapping="Wrap" 
-                                           FontSize="16" Foreground="{StaticResource MidBrush}" />
+                                           FontSize="16" Foreground="Goldenrod" />
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <CheckBox Content="Remember my choice" Margin="0, 10"/>
+                <CheckBox Content="Remember my choice" Foreground="Black" Margin="0, 10"/>
                 <Button Content="Cancel" Tapped="OnMapSelectionCancelTapped"></Button>
             </StackPanel>
         </Grid>
