--- a/ConfluxMobile/Conflux.UI/Views/LoginPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/LoginPage.xaml
@@ -5,21 +5,22 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="White" RequestedTheme="Light">
+    Background="WhiteSmoke">
 
     <Page.Transitions>
         <TransitionCollection>
-            <EntranceThemeTransition FromHorizontalOffset="0"
-                                     FromVerticalOffset="50" 
-                                     IsStaggeringEnabled="True"/>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo/>
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
 
-    <Grid>
+    <Grid x:Name="RootGrid">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
-                <EntranceThemeTransition FromHorizontalOffset="0" 
-                                         FromVerticalOffset="50"/>
+                <EntranceThemeTransition FromVerticalOffset="50" FromHorizontalOffset="0"/>
             </TransitionCollection>
         </Grid.ChildrenTransitions>
         <Grid.RowDefinitions>
