--- a/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/SharedInfo.xaml
@@ -9,12 +9,15 @@
 
     <Page.Transitions>
         <TransitionCollection>
-            <NavigationThemeTransition/>
-            <EntranceThemeTransition IsStaggeringEnabled="True"/>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo />
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
-    
-    <Grid>
+
+    <Grid Margin="0, 22, 0, 0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -24,7 +27,9 @@
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
             <TextBlock Text="CONFLUX" Margin="0,12,0,0" Foreground="Teal"
                        Style="{ThemeResource TitleTextBlockStyle}" />
-            <TextBlock Text="shared info" Margin="0,-6.5,0,26.5" Foreground="Teal"
+            <TextBlock ContinuumNavigationTransitionInfo.IsEntranceElement="True"
+                       ContinuumNavigationTransitionInfo.IsExitElement="True"
+                Text="shared info" Margin="0,-6.5,0,26.5" Foreground="Teal"
                        Style="{ThemeResource HeaderTextBlockStyle}" 
                        CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}" />
         </StackPanel>
