--- a/ConfluxMobile/Conflux.UI/Views/TermsOfUsePage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/TermsOfUsePage.xaml
@@ -5,11 +5,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="White" >
+    Background="WhiteSmoke">
 
     <Page.Transitions>
         <TransitionCollection>
-            <PaneThemeTransition Edge="Bottom"/>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo/>
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
     
