--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -4,10 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="using:Conflux.UI.Converters" 
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    xmlns:local="using:Conflux.UI.ViewModels"
+    xmlns:controls="using:Conflux.UI.Controls"
     mc:Ignorable="d"
     Background="WhiteSmoke">
 
@@ -17,15 +14,6 @@
         </TransitionCollection>
     </Page.Transitions>
     
-    <Page.Resources>
-        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
-        <converters:BoolToColorConverter x:Key="VisitedEventColorConverter"/>
-        <converters:DateSentenceConverter x:Key="DateSentenceConverter"/>
-        <MenuFlyout x:Key="NewestEventFlyout">
-            <MenuFlyoutItem Text="add to blacklist" Click="OnNewestEventContextMenuClicked"/>
-        </MenuFlyout>
-    </Page.Resources>
-
     <Page.BottomAppBar>
         <CommandBar IsSticky="False" ClosedDisplayMode="Minimal">
             <CommandBar.SecondaryCommands>
@@ -76,51 +64,11 @@
                                   SelectionChanged="OnNearbyEventsListSelectionChanged">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid Margin="0, 10" FlyoutBase.AttachedFlyout="{StaticResource NewestEventFlyout}">
-                                        <interactivity:Interaction.Behaviors>
-                                            <core:EventTriggerBehavior EventName="Holding">
-                                                <local:OpenEventFlyoutAction />
-                                            </core:EventTriggerBehavior>
-                                        </interactivity:Interaction.Behaviors>
-                                        <Grid.ChildrenTransitions>
-                                            <TransitionCollection>
-                                                <AddDeleteThemeTransition />
-                                            </TransitionCollection>
-                                        </Grid.ChildrenTransitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="5"/>
-                                            <ColumnDefinition Width="*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Margin="0, 5, 0, 3"
-                                              Background="{Binding Visited, Converter={StaticResource VisitedEventColorConverter}}">
-                                        </Grid>
-                                        <TextBlock Grid.Row="0" Grid.Column="1"
-                                                   Margin="10, 0, 5, 2"
-                                                   TextWrapping="Wrap" TextTrimming="CharacterEllipsis" MaxLines="3"
-                                                   FontSize="22"
-                                                   Text="{Binding Event.Title}" Foreground="Teal"
-                                                   ContinuumNavigationTransitionInfo.IsExitElement="True"/>
-                                        <TextBlock Grid.Row="1" Grid.Column="1" Margin="10, 2, 5, 5"
-                                                   Visibility="{Binding Event.StartTime, Converter={StaticResource NullToVisibilityConverter}}"
-                                                   Text="{Binding Event.StartTime, Converter={StaticResource DateSentenceConverter}, ConverterParameter='Start'}"
-                                                   Foreground="Black"/>
-                                        <TextBlock Grid.Row="2" Grid.Column="1" Margin="10, 2, 5, 5"
-                                                   Visibility="{Binding Event.EndTime, Converter={StaticResource NullToVisibilityConverter}}"
-                                                   Text="{Binding Event.EndTime, Converter={StaticResource DateSentenceConverter}, ConverterParameter='End'}"
-                                                   Foreground="Black"/>
-                                        <TextBlock Grid.Row="3" Grid.Column="1" Margin="10, 0, 5, 2"
-                                                   Visibility="{Binding Event.Location, Converter={StaticResource NullToVisibilityConverter}}"
-                                                   TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
-                                                   FontSize="16"
-                                                   Text="{Binding Event.Location.Name}" Foreground="Teal"
-                                                   MaxLines="2"/>
-                                    </Grid>
+                                    <controls:EventItem Title="{Binding Event.Title}" 
+                                                        StartTime="{Binding Event.StartTime}"
+                                                        EndTime="{Binding Event.EndTime}"
+                                                        Location="{Binding Event.Location}"
+                                                        Visited="{Binding Visited}"/>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
