--- a/ConfluxMobile/Conflux.UI/Views/MyEventsPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MyEventsPage.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="using:Conflux.UI.Converters"
+    xmlns:controls="using:Conflux.UI.Controls"
     mc:Ignorable="d"
     Background="WhiteSmoke">
 
@@ -13,10 +13,6 @@
             <NavigationThemeTransition/>
         </TransitionCollection>
     </Page.Transitions>
-
-    <Page.Resources>
-        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
-    </Page.Resources>
 
     <Grid Margin="0, 22, 0, 0">
         <Grid.RowDefinitions>
@@ -35,46 +31,11 @@
                       SelectionChanged="OnMyEventsListSelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Margin="0, 10">
-                            <Grid.ChildrenTransitions>
-                                <TransitionCollection>
-                                    <AddDeleteThemeTransition />
-                                </TransitionCollection>
-                            </Grid.ChildrenTransitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="5"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Margin="0, 5, 0, 3"
-                                              Background="DarkGray">
-                            </Grid>
-                            <TextBlock Grid.Row="0" Grid.Column="1"
-                                                   Padding="10, 0, 5, 2"
-                                                   TextTrimming="CharacterEllipsis"
-                                                   FontSize="22"
-                                                   Text="{Binding Event.Title}" Foreground="Teal"
-                                                   ContinuumNavigationTransitionInfo.IsExitElement="True"/>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Padding="10, 2, 5, 5"
-                                                   Visibility="{Binding Event.StartTime, Converter={StaticResource NullToVisibilityConverter}}"
-                                                   Text="{Binding Event.StartTime}"
-                                                   Foreground="Black"/>
-                            <TextBlock Grid.Row="2" Grid.Column="1" Padding="10, 2, 5, 5"
-                                                   Visibility="{Binding Event.EndTime, Converter={StaticResource NullToVisibilityConverter}}"
-                                                   Text="{Binding Event.EndTime}"
-                                                   Foreground="Black"/>
-                            <TextBlock Grid.Row="3" Grid.Column="1" Padding="10, 0, 5, 2"
-                                                   Visibility="{Binding Event.Location, Converter={StaticResource NullToVisibilityConverter}}"
-                                                   TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
-                                                   FontSize="16" Foreground="Teal"
-                                                   Text="{Binding Event.Location.Name}"
-                                                   MaxLines="2"/>
-                        </Grid>
+                        <controls:EventItem Title="{Binding Event.Title}"
+                                            StartTime="{Binding Event.StartTime}"
+                                            EndTime="{Binding Event.EndTime}"
+                                            Location="{Binding Event.Location}"
+                                            Visited="{Binding Visited}"/>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
