--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -5,6 +5,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Conflux.UI.Controls"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:local="using:Conflux.UI.ViewModels"
     mc:Ignorable="d"
     Background="WhiteSmoke">
 
@@ -13,7 +16,7 @@
             <NavigationThemeTransition/>
         </TransitionCollection>
     </Page.Transitions>
-    
+
     <Page.BottomAppBar>
         <CommandBar IsSticky="False" ClosedDisplayMode="Minimal">
             <CommandBar.SecondaryCommands>
@@ -21,6 +24,12 @@
             </CommandBar.SecondaryCommands>
         </CommandBar>
     </Page.BottomAppBar>
+
+    <Page.Resources>
+        <MenuFlyout x:Key="EventFlyout">
+            <MenuFlyoutItem Text="add to blacklist" Click="OnAddToBlacklist"/>
+        </MenuFlyout>
+    </Page.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -64,18 +73,25 @@
                                   SelectionChanged="OnNearbyEventsListSelectionChanged">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
-                                    <controls:EventItem Title="{Binding Event.Title}" 
+                                    <Grid FlyoutBase.AttachedFlyout="{StaticResource EventFlyout}">
+                                        <interactivity:Interaction.Behaviors>
+                                            <core:EventTriggerBehavior EventName="Holding">
+                                                <local:OpenEventFlyoutAction />
+                                            </core:EventTriggerBehavior>
+                                        </interactivity:Interaction.Behaviors>
+                                        <controls:EventItem Title="{Binding Event.Title}" 
                                                         StartTime="{Binding Event.StartTime}"
                                                         EndTime="{Binding Event.EndTime}"
                                                         Location="{Binding Event.Location}"
                                                         Visited="{Binding Visited}"/>
+                                    </Grid>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
                     </DataTemplate>
                 </HubSection>
                 <HubSection Header="MY FRIENDS" Foreground="Teal">
-                    
+
                 </HubSection>
             </Hub>
         </Grid>
