Fixed height of Titles for the items in the list of events.

--- a/ConfluxMobile/Conflux.UI/Controls/EventItem.xaml
+++ b/ConfluxMobile/Conflux.UI/Controls/EventItem.xaml
@@ -35,7 +35,7 @@
         </Grid>
         <TextBlock Grid.Row="0" Grid.Column="1" Margin="10, 0, 5, 2"
                    TextWrapping="Wrap" TextTrimming="CharacterEllipsis" MaxLines="3"
-                   FontSize="22" 
+                   FontSize="22" LineStackingStrategy="MaxHeight"
                    Text="{Binding Title}" 
                    Foreground="Teal"
                    ContinuumNavigationTransitionInfo.IsExitElement="True"/>
