Added Highlights Events control (UI and mock data).

--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -88,8 +88,10 @@
                         </ListView>
                     </DataTemplate>
                 </HubSection>
-                <HubSection Header="MY FRIENDS" Foreground="Teal">
-
+                <HubSection Header="HIGHLIGHTS" Foreground="Teal">
+                    <DataTemplate>
+                        <controls:HighlightEvents />
+                    </DataTemplate>
                 </HubSection>
             </Hub>
         </Grid>
