--- a/ConfluxMobile/Conflux.UI/Controls/HighlightEvents.xaml
+++ b/ConfluxMobile/Conflux.UI/Controls/HighlightEvents.xaml
@@ -42,12 +42,12 @@
             </SemanticZoom.ZoomedInView>
             <SemanticZoom.ZoomedOutView>
                 <ListView ScrollViewer.IsVerticalScrollChainingEnabled="False"
-                          ItemsSource="{Binding EventsGroups}"
+                          ItemsSource="{Binding Source={StaticResource EventsGroupsCollectionViewSource},ElementName=CVS,Path=CollectionGroups}" 
                           Background="#C0F5F5F5" Margin="10">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Grid Background="Teal" Width="250" Height="85" Margin="0, 0, 5, 5">
-                                <TextBlock FontSize="30" Text="{Binding Key}"
+                                <TextBlock FontSize="30" Text="{Binding Group.Key}"
                                            Foreground="WhiteSmoke" Margin="10"
                                            VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
                             </Grid>
